# pavucontrol-qt

./: .gitignore  CMakeLists.txt  README.md  pavucontrol-qt-git.kdev4
.kdev4/: pavucontrol-qt-git.kdev4
cmake/: LXQtCompilerSettings.cmake  LXQtTranslateTs.cmake
src/: CMakeLists.txt  devicewidget.ui  invoke_method_functor.h  mainwindow.cc  mainwindow.h  mainwindow.ui  needs_invoke_method_functor.h  pavucontrol-qt.desktop.in  pavucontrol.cc  pavucontrol.h
